--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "unibest",
+  "name": "衣设",
   "appid": "H57F2ACE4",
-  "description": "",
+  "description": "衣设 - 线上服装商城",
   "versionName": "1.0.0",
   "versionCode": "100",
   "transformPx": false,
